--- a/templates/docker-compose.yaml
+++ b/templates/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - DOCKER_MODS=linuxserver/calibre-web:calibre
     volumes:
       - /home/ubuntu/config:/config
-      - /home/ubuntu/Dropbox/calibre-library:/books
+      - /home/ubuntu/books:/books
     ports:
       - 8083:8083
     restart: unless-stopped
