--- a/server-resources/templates/docker-compose.yaml
+++ b/server-resources/templates/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - ONLY_SUBDOMAINS=false
       - STAGING=${use_test_cert}
     volumes:
-      - /home/ubuntu/calibre-web-proxy.conf:/config/nginx/proxy_confs/calibre-web-proxy.conf
+      - /home/ubuntu/calibre-web.subfolder.conf:/config/nginx/proxy-confs/calibre-web.subfolder.conf
     ports:
       - 443:443
       - 80:80 #optional
