--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,7 @@ Temporary Items
 
 ### Terraform ###
 # Local .terraform directories
-**/.terraform/*
+.terraform/*
 
 # .tfstate files
 *.tfstate
